<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MachineMode" Id="{3dad0e52-54d0-4c73-bea3-b8b5ce432cdb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MachineMode :
(
	AUTO_CYCLE	 		:= 0,
    MANUAL	 	 		:= 1,
    CALIBRATION	 		:= 2,
	IMEDIATE_FAULT		:= 3,
	STOPPED				:= 4,
	SYSTEM_READY		:= 5,
	SYSTEM_INITIALIZING	:= 6
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>